--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,4 @@
-@import 'Variables';
+@import './variables.scss';
 @import './normalize.css';
 @import '../App/App.scss';
 @import '../About/about.scss';
