--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ body {
   padding: 2rem;
   left: -150px;
   top: -150px;
+  overflow: hidden;
 }
 
 .clock-face {
@@ -27,12 +28,12 @@ body {
   text-align: center;
   position: absolute;
   bottom: 0;
-  right: 30%;
+  right: 35%;
   background: linear-gradient(to right, hsla(223, 24%, 45%, .8) 0%, hsla(200, 28%, 59%, .8) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  opacity: .6;
 }
-
 
 .clock-num {
   font-family: serif;
@@ -46,6 +47,18 @@ body {
   color: hsla(275, 100%, 90%, .2);
 }
 
+.center-dot {
+  position: absolute;
+  bottom: 46.5%;
+  left: 47.5%;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: rgb(0, 0, 26);
+  border: 2px solid hsla(275, 100%, 90%, .2);
+  z-index: 15;
+}
+
 .hand {
   width: 50%;
   height: 10px;
@@ -54,6 +67,7 @@ body {
   top: 50%;
   transform-origin: 100%;
   transform: rotate(90deg);
+  z-index: 10;
 }
 
 #hour-hand {
@@ -67,3 +81,5 @@ body {
 #second-hand {
   height: 5px;
 }
+
+/* CLOCK FACE CANVAS STYLES */
