--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Kawi:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=IM+Fell+DW+Pica:ital@1&family=Montserrat:wght@300;400;500&family=Noto+Sans+Kawi:wght@400;500;600;700&family=Open+Sans&family=Permanent+Marker&family=Rochester&family=Sacramento&family=Satisfy&family=UnifrakturMaguntia&display=swap');
 
 body {
   margin: 0
@@ -6,7 +6,7 @@ body {
 
 /* STYLES FOR THE MIDNIGHTS CLOCK */
 .clock {
-  border: 20px solid hsla(275, 100%, 90%, .2);
+  border: 20px solid hsla(275, 100%, 90%, .25);
   border-radius: 50%;
   height: 40rem;
   width: 40rem;
@@ -15,6 +15,9 @@ body {
   left: -150px;
   top: -150px;
   overflow: hidden;
+  animation-duration: 1000ms;
+  animation-name: glitch;
+  /* animation-delay: 1ms; */
 }
 
 .clock-face {
@@ -30,6 +33,7 @@ body {
   bottom: 0;
   right: 35%;
   background: linear-gradient(to right, hsla(223, 24%, 45%, .8) 0%, hsla(200, 28%, 59%, .8) 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: .6;
@@ -44,7 +48,7 @@ body {
   top: -5%;
   right: 46.5%;
   font-size: 3rem;
-  color: hsla(275, 100%, 90%, .2);
+  color: hsla(275, 100%, 90%, .25);
 }
 
 .center-dot {
@@ -55,19 +59,21 @@ body {
   width: 30px;
   border-radius: 50%;
   background-color: rgb(0, 0, 26);
-  border: 2px solid hsla(275, 100%, 90%, .2);
+  border: 2px solid hsla(275, 100%, 90%, .5);
   z-index: 15;
 }
 
 .hand {
   width: 50%;
   height: 10px;
-  background: hsla(275, 100%, 90%, .2);
+  background: hsla(275, 100%, 90%, .25);
   position: absolute;
   top: 50%;
   transform-origin: 100%;
   transform: rotate(90deg);
   z-index: 10;
+  /* transition: all 0.05s; */
+  transition-timing-function: cubic-bezier(0, 0, 0, 0);
 }
 
 #hour-hand {
@@ -82,4 +88,103 @@ body {
   height: 5px;
 }
 
-/* CLOCK FACE CANVAS STYLES */
+/* ERAS SELECTION STYLES */
+.eras-container {
+  display: grid;
+  grid-template-areas: 'debut fearless speak' 'red midnights seagull' 'rep midnights lover' 'folklore midnights evermore';
+}
+
+.era {
+  width: 100px;
+  height: 100px;
+  opacity: .6;
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+
+.era:hover {
+  transform: scale(1.05);
+  transition: smooth 5ms;
+  opacity: 1;
+  z-index: 10;
+}
+
+.debut {
+  grid-area: debut;
+  background-color: #748c6f !important;
+}
+
+.fearless {
+  grid-area: fearless;
+  background-color: #f2c685 !important;
+}
+
+.speaknow {
+  grid-area: speak;
+  background-color: #ad8fab !important;
+}
+
+.red {
+  grid-area: red;
+  background-color: #79323e !important;
+}
+
+.seagull {
+  grid-area: seagull;
+  background-color: #7aa5bf !important;
+}
+
+.reputation {
+  grid-area: rep;
+  background-color: #767273 !important;
+}
+
+.lover {
+  grid-area: lover;
+  background-color: #fab0cf !important;
+}
+
+.folklore {
+  grid-area: folklore;
+  background-color: #767273 !important;
+}
+
+.evermore {
+  grid-area: evermore;
+  background-color: #c5aa92 !important;
+}
+
+
+.midnights {
+  grid-area: midnights;
+  height: 300px;
+  background-color: #020035 !important;
+}
+
+
+/* CLOCK FACE ANIMATION */
+@keyframes glitch {
+  0% {
+    transform: translateX(0);
+    transform: translateY(0);
+  }
+
+  49% {
+    visibility: hidden;
+  }
+
+  50% {
+    transform: translateX(30px);
+    background-color: magenta;
+  }
+
+  51% {
+    visibility: hidden;
+  }
+
+  100% {
+    transform: translateY(-30px);
+    background-color: aqua;
+    visibility: visible;
+  }
+}
