--- a/src/styles.css
+++ b/src/styles.css
@@ -114,6 +114,10 @@ body {
   background-color: #748c6f !important;
 }
 
+.debut-bg {
+  background-color: papayawhip;
+}
+
 .fearless {
   grid-area: fearless;
   background-color: #f2c685 !important;
@@ -159,6 +163,12 @@ body {
   grid-area: midnights;
   height: 300px;
   background-color: #020035 !important;
+}
+
+.midnights-bg {
+  background-color: rgb(2, 0, 53);
+  background-image:
+    linear-gradient(151deg, rgba(0, 0, 28, 1) 0%, rgba(2, 0, 53, 1) 65%, rgba(120, 161, 181, .25) 100%),
 }
 
 
